phase2/guideline/y.output
Useless nonterminals

   ident


Terminals which are not used

   NUMBER


Useless rules

    4 ident: IDENT


Grammar

    0 $accept: program $end

    1 program: /* empty */
    2        | program function

    3 function: FUNCTION IDENT SEMICOLON


Terminals, with rules where they appear

$end (0) 0
error (256)
FUNCTION (258) 3
IDENT (259) 3
SEMICOLON (260) 3
NUMBER (261)


Nonterminals, with rules where they appear

$accept (7)
    on left: 0
program (8)
    on left: 1 2, on right: 0 2
function (9)
    on left: 3, on right: 2


state 0

    0 $accept: . program $end

    $default  reduce using rule 1 (program)

    program  go to state 1


state 1

    0 $accept: program . $end
    2 program: program . function

    $end      shift, and go to state 2
    FUNCTION  shift, and go to state 3

    function  go to state 4


state 2

    0 $accept: program $end .

    $default  accept


state 3

    3 function: FUNCTION . IDENT SEMICOLON

    IDENT  shift, and go to state 5


state 4

    2 program: program function .

    $default  reduce using rule 2 (program)


state 5

    3 function: FUNCTION IDENT . SEMICOLON

    SEMICOLON  shift, and go to state 6


state 6

    3 function: FUNCTION IDENT SEMICOLON .

    $default  reduce using rule 3 (function)
